Fix transparent header, page header spacing, and
only load page header CSS via kirki if the page header is used somewhere.

--- a/assets/scss/components/header/_page-header.scss
+++ b/assets/scss/components/header/_page-header.scss
@@ -19,7 +19,7 @@
 
 	> .wrap {
 		z-index: 2;
-		padding: var(--page-header-padding, var(--page-header-padding-top, 10vw) var(--page-header-padding-sides, 0) var(--page-header-padding-bottom, 10vw));
+		padding: var(--page-header-padding, var(--page-header-padding-top) var(--page-header-padding-sides, 0) var(--page-header-padding-bottom));
 	}
 }
 
